# dinov3

./: .gitignore  BUILD.bazel  MODULE.bazel  requirements.txt  requirements_lock.txt
dinov3/: BUILD.bazel  dense_sparse_matching_test.py  dinotxt_inference_test.py
dinov3/checkpointer/: BUILD.bazel
dinov3/configs/: BUILD.bazel
dinov3/data/: BUILD.bazel
dinov3/data/datasets/: BUILD.bazel
dinov3/distributed/: BUILD.bazel
dinov3/env/: BUILD.bazel
dinov3/eval/: BUILD.bazel
dinov3/eval/dense/depth/: BUILD.bazel
dinov3/eval/detection/: BUILD.bazel
dinov3/eval/metrics/: BUILD.bazel
dinov3/eval/segmentation/: BUILD.bazel
dinov3/eval/text/: BUILD.bazel
dinov3/fsdp/: BUILD.bazel
dinov3/hub/: BUILD.bazel
dinov3/layers/: BUILD.bazel
dinov3/logging/: BUILD.bazel
dinov3/loss/: BUILD.bazel
dinov3/models/: BUILD.bazel
dinov3/run/: BUILD.bazel
dinov3/train/: BUILD.bazel
dinov3/utils/: BUILD.bazel
