load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")
py_library(
    name = "checkpointer",
    srcs = [
        "__init__.py",
        "checkpointer.py",
    ],
    deps = [
        requirement("torch"),
    ],
    visibility = ["//visibility:public"],
)
