load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")
py_library(
    name = "distributed",
    srcs = [
        "__init__.py",
        "torch_distributed_primitives.py",
        "torch_distributed_wrapper.py",
    ],
    deps = [
        requirement("torch"),
    ],
    visibility = ["//visibility:public"],
 )