load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")
py_library(
    name = "logging",
    srcs = [
        "__init__.py",
        "helpers.py",
    ],
    deps = [
        "//dinov3/distributed:distributed",
        requirement("termcolor"),
     ],
    visibility = ["//visibility:public"],
 )