load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")
py_library(
    name = "models",
    srcs = [
        "__init__.py",
        "convnext.py",
        "vision_transformer.py",
    ],
    deps = [
        requirement("torch"),
        requirement("numpy"),
        "//dinov3/layers:layers",
        "//dinov3/utils:utils",
     ],
    visibility = ["//visibility:public"],
 )