load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")
py_library(
    name = "segmentation",
    srcs = [
        "inference.py",
        "models/backbone/dinov3_adapter.py",
        "models/heads/__init__.py",
        "models/heads/mask2former_head.py",
        "models/heads/mask2former_transformer_decoder.py",
        "models/heads/pixel_decoder.py",
        "models/utils/batch_norm.py",
        "models/utils/ms_deform_attn.py",
        "models/utils/position_encoding.py",
        "models/utils/transformer.py",
        "models/utils/ops/setup.py",
        "models/utils/ops/test.py",
    ],
    deps = [
        requirement("torch"),
        requirement("torchvision"),
        requirement("numpy"),
        requirement("omegaconf"),
        requirement("scikit-learn"),
        requirement("pandas"),
        requirement("openpyxl"),
        requirement("pyyaml"),
        requirement("torchmetrics"),
        "//dinov3/distributed:distributed",
        "//dinov3/data:data",
        "//dinov3/run:init",
        "//dinov3/logging:logging",
        "//dinov3/checkpointer:checkpointer",
        "//dinov3/utils:utils",
        "//dinov3/configs:configs",
        "//dinov3/models:models",
     ],
    visibility = ["//visibility:public"],
 )