load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")
py_library(
    name = "depth",
    srcs = [
        "utils.py",
        "models/__init__.py",
        "models/dpt_head.py",
        "models/embed.py",
        "models/encoder.py",
    ],
    deps = [
        requirement("torch"),
     ],
    visibility = ["//visibility:public"],
 )